Fixes for links, styling tweaks, typos, and navigation on mobile. Moved files

--- a/ourgame.html
+++ b/ourgame.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="style/style.css">
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -109,12 +109,12 @@
                     </div>
                     <div class="col-md-4 footer-column">
                         <a href="https://twitter.com/Gingerbreadnft?s=20">
-                            <img src="/assets/ginger_icon_twetter.svg"
+                            <img src="./assets/ginger_icon_twetter.svg"
                                 id="icon-sm"
                                 alt="Our twitter">
                         </a>
                         <a href="https://discord.gg/S7W7cEfa">
-                            <img src="/assets/ginger_icon_discord.svg"
+                            <img src="./assets/ginger_icon_discord.svg"
                                 id="icon-sm"
                                 alt="Our discord">
                         </a>
