--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="style/style.css">
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Rock+Salt&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;700&family=Rock+Salt&display=swap"
             rel="stylesheet">
 
         <!-- Bootstrap CSS -->
@@ -19,14 +19,13 @@
             rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous">
-
         <title>Gingerbread Rebaked</title>
     </head>
     <body>
         <!-- header -->
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-white
-                fixed-top">
+                fixed-top px-1">
                 <a class="navbar-brand" href="index.html">
                     GINGERBREAD REBAKED
                 </a>
@@ -49,13 +48,11 @@
                             <a class="nav-link text-capitalize text-dark
                                 disabled"
                                 href="ourgame.html">Game
-                                <!-- <span class="sr-only">(current)</span> -->
                             </a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link text-capitalize text-dark"
                                 href="ourStory.html">Story
-                                <!-- <span class="sr-only">(current)</span> -->
                             </a>
                         </li>
 
@@ -133,14 +130,14 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-wrap">
                             <img
-                                src="/assets/Ginger-DIAMOND-CANE-Reveal.svg"
+                                src="./assets/Ginger-DIAMOND-CANE-Reveal.svg"
                                 alt="cafe-inner">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 align-self-center">
                         <div class="two-col-content">
                             <h5 class="inner-title"> Meet
-                                stu </h5>
+                                Stu </h5>
                             <p>This is Stu, the first one of our community
                                 developed NFTs. He is a bit dizzy from all that
                                 smoke and can't be bothered to remember
@@ -150,7 +147,7 @@
                             </p>
                             <a href="https://twitter.com/Gingerbreadnft?s=20"
                                 class="text-capitalize sign-up-btn">
-                                follow Sty's life</a>
+                                follow Stu's life</a>
                         </div>
                     </div>
                 </div>
@@ -158,7 +155,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-wrap">
                             <img
-                                src="/assets/Ginger-RED-EYES-01.svg"
+                                src="./assets/Ginger-RED-EYES-01.svg"
                                 alt="cafe-service">
                         </div>
                     </div>
@@ -173,7 +170,7 @@
                                 Stu's cigar to do it.
 
                             </p>
-                            <a href="http://127.0.0.1:5500/pages/ourStory.html"
+                            <a href="./ourStory.html#target"
                                 class="text-capitalize pink-btn">
                                 Check our roadmap! </a>
                         </div>
@@ -187,53 +184,27 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
+                        <p class="text-white mb-2">we love answering your
+                            ...</p>
+                        <h4 class="section-title text-capitalize text-white
+                            text-left">Frequently asked questions</h4>
+                        <p class="text-white mb-5">Oh, you didn't click on any
+                            of the previous links? Here's some more info for our
+                            loved but lazy couch potato friends.</p>
+                        <!-- <a href="#" class="pink-btn text-capitalize">more</a> -->
+                    </div>
+                    <div class="col-lg-6 col-md-12">
                         <div class="row">
                             <div class="col-lg-6 col-md-12">
                                 <div class="each-question">
                                     <h6 class="title-sm txt-bg"> wen drop?
                                     </h6>
-                                    <p>Here's some more info for our loved but
-                                        lazy couch potato friends. We're doing
+                                    <p>We're doing
                                         seasonal drops starting with Christmas.
                                         Yes! This Christmas! If you hold one of
                                         the original 10 000 gingers, you have a
                                         chance to receive one of the new 1000
                                         NFTs for free.</p>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-12">
-                                <div class="each-question">
-                                    <h6 class="title-sm txt-bg"> the hell is
-                                        DAO?
-                                    </h6>
-                                    <p>Lorem Ipsum is simply dummy text of
-                                        the
-                                        printing
-                                        and typesetting industry. Lorem
-                                        Ip'sum
-                                        has been
-                                        the industry's standard dummy text
-                                        ever
-                                        since
-                                        the 1500s.</p>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-md-12">
-                                <div class="each-question">
-                                    <h6 class="title-sm txt-bg"> wen game?
-                                    </h6>
-                                    <p>Lorem Ipsum is simply dummy text of
-                                        the
-                                        printing
-                                        and typesetting industry. Lorem
-                                        Ip'sum
-                                        has been
-                                        the industry's standard dummy text
-                                        ever
-                                        since
-                                        the 1500s.</p>
 
                                 </div>
                             </div>
@@ -254,16 +225,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12">
-                        <p class="text-white mb-2">we love answering your
-                            ...</p>
-                        <h4 class="section-title text-capitalize text-white
-                            text-left">Frequently asked questions</h4>
-                        <p class="text-white mb-5">Oh, you didn't click on any
-                            of the previous links? Here's some more info for our
-                            loved but lazy couch potato friends.</p>
-                        <!-- <a href="#" class="pink-btn text-capitalize">more</a> -->
-                    </div>
                 </div>
             </div>
         </section>
@@ -279,7 +240,7 @@
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="image-wrap mb-4">
                             <img class="game-img"
-                                src="/assets/gingerfightersgame.png"
+                                src="./assets/gingerfightersgame.png"
                                 alt="our game">
                         </div>
                         <div class="each-detail">
@@ -294,7 +255,7 @@
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="image-wrap mb-4">
                             <img
-                                src="/assets/stuchristmas.png"
+                                src="./assets/stuchristmas.png"
                                 alt="our drop">
                         </div>
                         <div class="each-detail">
@@ -308,7 +269,7 @@
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="image-wrap mb-4">
                             <img
-                                src="/assets/KingOfTheJungle.gif"
+                                src="./assets/KingOfTheJungle.gif"
                                 alt="more art">
                         </div>
                         <div class="each-detail">
@@ -332,7 +293,7 @@
                 <h4 class="section-title text-white">our oven is hot and our
                     bakers are working hard</h4>
                 <p class="text-center text-white">gingerbread houses?</p>
-                <img src="/assets/GBRLogo.svg" alt="">
+                <img src="./assets/GBRLogo.svg" alt="">
             </div>
         </section>
 
@@ -346,7 +307,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-wrap">
                             <img
-                                src="/assets/5710-2.svg"
+                                src="./assets/5710-2.svg"
                                 alt="cafe-inner">
                         </div>
                     </div>
@@ -385,12 +346,10 @@
             </div>
         </section>
 
-
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        <!-- JQuery, Popper, Bootstrap -->
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     </body>
     <!-- footer -->
@@ -418,17 +377,17 @@
                                 game</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ourStory.html">our story</a>
+                            <a class="nav-link" href="ourStory.html#target">our story</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4 footer-column">
                     <a href="https://twitter.com/Gingerbreadnft?s=20">
-                        <img src="/assets/ginger_icon_twetter.svg" id="icon-sm"
+                        <img src="./assets/ginger_icon_twetter.svg" id="icon-sm"
                             alt="Our twitter">
                     </a>
                     <a href="https://discord.gg/S7W7cEfa">
-                        <img src="/assets/ginger_icon_discord.svg" id="icon-sm"
+                        <img src="./assets/ginger_icon_discord.svg" id="icon-sm"
                             alt="Our discord">
                     </a>
 
