--- a/ourStory.html
+++ b/ourStory.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="style/style.css">
 
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Rock+Salt&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;700&family=Rock+Salt&display=swap"
             rel="stylesheet">
 
         <!-- Bootstrap CSS -->
@@ -25,7 +25,7 @@
         <!-- header -->
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-white
-                fixed-top">
+                fixed-top px-1">
                 <a class="navbar-brand" href="index.html">
                     GINGERBREAD REBAKED
                 </a>
@@ -41,31 +41,30 @@
                     <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link text-capitalize text-dark"
-                                href="index.html">Home
-                                <!-- <span class="sr-only">(current)</span></a> -->
+                                href="index.html">Home</a>
                             </li>
-                            <li class="nav-item disabled">
-                                <a class="nav-link text-capitalize text-dark"
-                                    href="ourgame.html">our Game
-                                    <!-- <span class="sr-only">(current)</span> -->
-                                </a>
-                            </li>
-                            <li class="nav-item active">
-                                <a class="nav-link text-capitalize text-dark"
-                                    href="ourStory.html">our Story
-                                    <!-- <span class="sr-only">(current)</span> -->
-                                </a>
-                            </li>
+                        <li class="nav-item active">
+                            <a class="nav-link text-capitalize text-dark
+                                disabled"
+                                href="ourgame.html">Game
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link text-capitalize text-dark"
+                                href="ourStory.html">Story
+                                <span class="sr-only">(current)</span></a>
+                            </a>
+                        </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link pink-btn"
-                                    href="https://cnft.io/marketplace?st=gingerbread">GET
-                                    GINGERS</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </header>
+                        <li class="nav-item">
+                            <a class="nav-link pink-btn"
+                                href="https://cnft.io/marketplace?st=gingerbread">GET
+                                GINGERS</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
             <section class="main-banner-story bg-img">
                 <div class="container">
@@ -80,7 +79,7 @@
                             continue
                             the project without a centralized power.</p>
                         <a
-                            href="http://127.0.0.1:5500/pages/ourStory.html#target"
+                            href="./ourStory.html#target"
                             class="text-capitalize pink-btn">
                             Check our roadmap! </a>
                     </div>
@@ -99,7 +98,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-wrap">
                             <img
-                                src="/assets/Ginger-SKI-GOGGLES--Art-Gallery.jpeg"
+                                src="./assets/Ginger-SKI-GOGGLES--Art-Gallery.jpeg"
                                 alt="cafe-inner">
                         </div>
                     </div>
@@ -123,7 +122,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-wrap image-wrap-meme">
                             <img
-                                src="/assets/GingerbreadStickers.jpeg"
+                                src="./assets/GingerbreadStickers.jpeg"
                                 alt="cafe-service">
                         </div>
                     </div>
@@ -247,7 +246,7 @@
                         <p class="text-white ml-5"> we hope you are as exicted
                             as
                             we are.</p>
-                        <img class="roadmap-logo" src="/assets/GBRLogo.svg"
+                        <img class="roadmap-logo" src="./assets/GBRLogo.svg"
                             alt="">
                     </div>
                 </div>
@@ -264,7 +263,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="image-wrap">
                             <img
-                                src="/assets/myZombieLord.svg"
+                                src="./assets/myZombieLord.svg"
                                 alt="cafe-inner">
                         </div>
                     </div>
@@ -306,11 +305,11 @@
 
 
 
-        <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+        <!-- JQuery, Popper, Bootstrap -->
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 
     </body>
     <!-- footer -->
@@ -345,12 +344,12 @@
                 </div>
                 <div class="col-md-4 footer-column">
                     <a href="https://twitter.com/Gingerbreadnft?s=20">
-                        <img src="/assets/ginger_icon_twetter.svg"
+                        <img src="./assets/ginger_icon_twetter.svg"
                             id="icon-sm"
                             alt="Our twitter">
                     </a>
                     <a href="https://discord.gg/S7W7cEfa">
-                        <img src="/assets/ginger_icon_discord.svg"
+                        <img src="./assets/ginger_icon_discord.svg"
                             id="icon-sm"
                             alt="Our discord">
                     </a>
