--- a/ourgame.html
+++ b/ourgame.html
@@ -113,7 +113,7 @@
                                 id="icon-sm"
                                 alt="Our twitter">
                         </a>
-                        <a href="https://discord.gg/S7W7cEfa">
+                        <a href="https://discord.gg/Uuw4jKgghB">
                             <img src="./assets/ginger_icon_discord.svg"
                                 id="icon-sm"
                                 alt="Our discord">
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col-md-4 text-left">
                         <span class="copyright quick-links">Copyright &copy;
-                            rabked.io <script>document.write(new Date().getFullYear())</script>
+                            rebaked.io <script>document.write(new Date().getFullYear())</script>
                         </span>
                     </div>
                     <!-- <div class="col-md-4 text-left">
