--- a/ourStory.html
+++ b/ourStory.html
@@ -316,18 +316,25 @@
     <footer>
         <div class="container">
             <div class="row mb-4">
-                <div class="col-md-6 footer-column">
+                <div class="col-md-6 footer-column mt-4">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <p class="footer-title mb-5">Policy IDs</p>
+                            <p class="footer-title mb-3">Policy IDs</p>
                         </li>
+                        <li><p class="footer-title">Gingerbread Squad</p></li>
                         <li class="nav-item">
-                            <span class="policy-id sign-up-btn">ff1463bdfaf9268cafba9918a4b389723a90a21b3a4068d36b2fe405
+                        <li class="nav-item mb-3">
+                            <span class="policy-id">ff1463bdfaf9268cafba9918a4b389723a90a21b3a4068d36b2fe405
+                            </span>
+                        </li>
+                        <li><p class="footer-title mt-2">Gingerbread Squad: Holidazed</p></li>
+                        <li class="nav-item">
+                            <span class="policy-id">874bffc030b6a63e1711903bc47552eb11e55da54a5798a9b22f07c5
                             </span>
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-6 footer-column">
+                <div class="col-md-4 footer-column mt-4">
                     <ul class="nav flex-column">
                         <li class="nav-item">
                             <p class="footer-title">Rebaked</p>
@@ -337,27 +344,25 @@
                                 game</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="ourStory.html">our
-                                story</a>
+                            <a class="nav-link" href="index.html">home</a>
                         </li>
                     </ul>
                 </div>
-                <div class="col-md-4 footer-column">
-                    <a href="https://twitter.com/Gingerbreadnft?s=20">
-                        <img src="./assets/ginger_icon_twetter.svg"
-                            id="icon-sm"
-                            alt="Our twitter">
-                    </a>
-                    <a href="https://discord.gg/S7W7cEfa">
-                        <img src="./assets/ginger_icon_discord.svg"
-                            id="icon-sm"
-                            alt="Our discord">
-                    </a>
-
+                <div class="col-md-2 footer-column mt-4">
+                    <div>
+                        <a href="https://twitter.com/Gingerbreadnft?s=20">
+                            <img src="./assets/ginger_icon_twetter.svg" id="icon-sm" alt="Our twitter">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="https://discord.gg/Uuw4jKgghB">
+                            <img src="./assets/ginger_icon_discord.svg" id="icon-sm" alt="Our discord">
+                        </a>
+                    </div>
                 </div>
             </div>
 
-            <div class="row align-items-center">
+            <div class="row align-items-center mt-5">
 
                 <div class="col-md-4 text-left">
                     <ul class="list-inline social-buttons mb-0">
@@ -380,19 +385,19 @@
                 </div>
                 <div class="col-md-4 text-left">
                     <span class="copyright quick-links">Copyright &copy;
-                        rabked.io <script>document.write(new Date().getFullYear())</script>
+                        rebaked.io <script>document.write(new Date().getFullYear())</script>
                     </span>
                 </div>
                 <!-- <div class="col-md-4 text-left">
-                        <ul class="list-inline quick-links mb-0">
-                            <li class="list-inline-item">
-                                <a href="#">Privacy Policy</a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#">Terms of Use</a>
-                            </li>
-                        </ul>
-                    </div> -->
+                    <ul class="list-inline quick-links mb-0">
+                        <li class="list-inline-item">
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div> -->
             </div>
         </div>
     </footer>
