--- a/ourStory.html
+++ b/ourStory.html
@@ -327,9 +327,14 @@
                             <span class="policy-id">ff1463bdfaf9268cafba9918a4b389723a90a21b3a4068d36b2fe405
                             </span>
                         </li>
-                        <li><p class="footer-title mt-2">Gingerbread Squad: Holidazed</p></li>
-                        <li class="nav-item">
+                        <li><p class="footer-title mt-2 mb-3">Gingerbread Squad: Holidazed</p></li>
+                        <li class="nav-item mb-3">
                             <span class="policy-id">874bffc030b6a63e1711903bc47552eb11e55da54a5798a9b22f07c5
+                            </span>
+                        </li>                        
+                        <li><p class="footer-title mt-2">Gingerbread Squad: GingerMoon Raffle</p></li>
+                        <li class="nav-item">
+                            <span class="policy-id">dae56e147ec0904379c86f1ee27195b26196afa2b15b5fecc538f96c
                             </span>
                         </li>
                     </ul>
