--- a/index.html
+++ b/index.html
@@ -373,10 +373,15 @@
                             </span>
                         </li>                        
                         <li><p class="footer-title mt-2">Gingerbread Squad: GingerMoon Raffle</p></li>
-                        <li class="nav-item">
+                        <li class="nav-item mb-3">
                             <span class="policy-id">dae56e147ec0904379c86f1ee27195b26196afa2b15b5fecc538f96c
                             </span>
                         </li>
+                        <li><p class="footer-title mt-2">Rebaked: Lobster frens</p></li>
+                        <li class="nav-item">
+                            <span class="policy-id">9df1b7979ae81f66c8e1caf040aed23fd1a0e074b597636636daf075
+                            </span>
+                        </li>  
                     </ul>
                 </div>
                 <div class="col-md-4 footer-column mt-4">
